# Jx

./: CMakeLists.txt  README.md
common/: bin_util.h  binary_reader.h  debug_util.cpp  debug_util.h  file_util.cpp  file_util.h  link_types.h  types.h
common/goos/: text_db.h
common/type_system/: type.h  type_spec.h
decompiler/: CMakeLists.txt  main.cpp
decompiler/disasm/: decompiler_label.h  instruction.h  instruction_decode.cpp  instruction_decode.h  opcode.h
decompiler/function/: function.cpp  function.h
decompiler/object_file/: linked_object_file.cpp  linked_object_file.h  linked_object_file_creation.cpp  linked_object_file_creation.h  linked_word.cpp  linked_word.h  object_file_db.cpp  object_file_db.h
decompiler/util/: decompiler_type_system.cpp  decompiler_type_system.h
